bluec-tests/tests/invalid/types_char/array_init_unary.c

int main(void) {
    char text[4] = { 'a'++, --'a', &'a', *'a' };

    return 0;
}
